@@ -15,17 +15,6 @@ jar {
     enabled = true
 }
 
-tasks.withType(JavaCompile).all {
-    options.compilerArgs += ['--enable-preview']
-}
-
-tasks.withType(Test).all {
-    jvmArgs += '--enable-preview'
-}
-
-tasks.withType(JavaExec) {
-    jvmArgs += '--enable-preview'
-}
 
 ext {
     set('springCloudGcpVersion', "2.0.9")
