@@ -16,17 +16,6 @@ jar {
     enabled = true
 }
 
-tasks.withType(JavaCompile).all {
-    options.compilerArgs += ['--enable-preview']
-}
-
-tasks.withType(Test).all {
-    jvmArgs += '--enable-preview'
-}
-
-tasks.withType(JavaExec) {
-    jvmArgs += '--enable-preview'
-}
 
 repositories {
     mavenCentral()
